Added view and URL for single post detail

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,13 @@
-<html>
-	<head>
-		<title>Find Nicki's Verse</title>
-		<h1>Find Nicki's Verse</h1>
-		<h3><em>Skip to the best part</em></h3>
-	</head>
-	<body>
-		<p>This is where the search bar will go</p>
-		{% for post in posts %}
-			<div>
-				<h3><a href="">{{post.title}}</a></h2>
-				<p>published: {{post.published_date}}</p>
-				<p>{{post.text|linebreaks}}</p>
+{% extends "blog/base.html" %}
+
+{% block content %}
+	{% for post in posts %}
+		<div class="post">
+			<div class="date">
+			    <p>published: {{ post.published_date }}</p>
 			</div>
-		{% endfor %}
-	</body>
-</html>
+			<h1><a href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
+			<p>{{ post.text|linebreaks }}</p>
+		</div>
+	{% endfor %}
+{% endblock %}
